<resources>
	<string name="nononsense_notes" translatable="false">NoNonsense Notes</string>
	<string name="app_name_short">Notes</string>
	<string name="title_create">New note</string>
	<string name="timemachine">Time machine</string>
	<string name="time">Time</string>
	<string name="done">Done</string>
	<string name="saved">Saved</string>
	<string name="distance">Distance</string>
	<string name="near">Near</string>
	<string name="menu_save_and_add">Save and add note</string>
	<string name="menu_delete">Delete</string>
	<string name="menu_deletelist">Delete list</string>
	<string name="menu_sync">Sync</string>
	<string name="menu_share">Share</string>
	<string name="menu_preferences">Settings</string>
	<string name="menu_createlist">Start new list</string>
	<string name="menu_clearcompleted">Clear completed</string>
	<string name="menu_setdefaultlist">Set as default list</string>
	<string name="new_default_set">New default set</string>
	<string name="menu_managelists">Edit lists</string>
	<string name="add_item">Add item</string>
	<string name="delete_question">Delete?</string>
	<string name="delete_items_message">Delete these items?</string>
	<string name="delete_item_message">Delete this item?</string>
	<string name="delete_list_message">Delete this list?</string>
	<string name="delete_completed_tasks_question">Delete all completed tasks?</string>
	<string name="editor_due_date_hint">Due date</string>
	<string name="editor_title_hint">Title</string>
	<string name="editor_note_hint">Note</string>
	<string name="resolve_edit">Edit note</string>
	<string name="default_style">Default style</string>
	<string name="show_items_as_tasks">Show items as tasks</string>
	<string name="show_items_as_notes">Show items as notes</string>
	<string name="sort_list_default">Default sorting order</string>
	<string name="sort_list_alphabetical">A-Z</string>
	<string name="sort_list_due">Due date</string>
	<string name="sort_list_updated">Latest updated</string>
	<string name="sort_list_manual">Manual</string>
	<string name="search_description">Notes and tasks</string>
	<string name="archive">Archive</string>
	<string name="view_deletedtasks" translatable="false">@string/archive</string>
	<string name="restore">Restore</string>
	<string name="restore_to">Restore to</string>
	<string name="search_hint">Search</string>
	<string name="settings_theme">Current theme</string>
	<string name="settings_theme_dialog">Use theme</string>
	<string name="settings_lang">Language</string>
	<string name="settings_lang_dialog" translatable="false">@string/settings_lang</string>
	<string name="settings_summary_theme_black">Black</string>
	<string name="settings_summary_theme_dark">Dark</string>
	<string name="settings_summary_theme_light">Light</string>
	<string name="settings_summary_theme_classic">Classic</string>
	<string name="settings_cat_appearance">Appearance</string>
	<string name="preference_preview_text">This is how the editor text will appear</string>
	<string name="settings_account_title">Select an account</string>
	<string name="settings_account_summary">Touch to switch account</string>
	<string name="settings_sync_enable_title">Google Tasks sync</string>
	<string name="gtasks_sync_info">Not all info can be synced with Google Tasks. Only notes, due date (not time) and todo-status is.</string>
	<string name="settings_cat_syncing">Syncing</string>
	<string name="gtasks" translatable="false">Google Tasks</string>
	<string name="show_from_all_lists">All lists</string>
	<string name="lists">Lists</string>
	<string name="deleted">Deleted</string>
	<string name="repeat">Repeat</string>
	<string name="once">Once</string>
	<string name="always">Always</string>
	<string name="permission_read_label">read notes and lists</string>
	<string name="permission_read_desc">Allows the app to read your notes and related lists in No Nonsense Notes</string>
	<string name="permission_write_label">modify notes and lists</string>
	<string name="permission_write_desc">Allows the app to insert, update and delete notes and lists in No Nonsense Notes</string>
	<string name="settings_list_dialog">Select a list</string>
	<string name="settings_list">List</string>
	<string name="drag_to_timetravel">Drag to time travel</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="import_data_question">Import data?</string>
	<string name="import_started">Importing data…</string>
	<string name="import_data_msg">Import the notes from the donate version? Afterwards you are given the option to uninstall it.</string>
	<string name="imported_result">Imported %1$d notes into %2$d lists</string>
	<string name="import_error">Something went wrong: %s</string>
	<string name="showcase_main_title">Access your lists</string>
	<string name="showcase_main_msg">Touch the icon or swipe from the left edge</string>
	<string name="showcase_drawer_title">Manage your lists</string>
	<string name="showcase_drawer_msg">Long-press a list name to edit or delete it</string>
	<string name="showcase_timemachine_title">Save your notes</string>
	<string name="showcase_timemachine_msg">Changes are always saved. Use the time machine to restore a previous version.</string>
	<string name="donate_to_unlock">Donate to unlock</string>
	<string name="premiums_unlocked_and_thanks">Premium features unlocked. Thank you for your support!</string>
	<string name="notification_channel_name">Reminders for notes</string>
	<string name="notification_channel_description">Shows the note content at the time of the chosen reminder</string>
	<string name="feature_is_WIP">This feature is a W.I.P.</string>
	<string name="permission_denied">Can not proceed: you denied the permission</string>
	<string name="special_thanks">Special thanks</string>
	<string name="no_sync_method_chosen">You did not choose a sync method</string>
	<string name="gtasks_not_working">Google Tasks (does not work)</string>
	<string name="file_picker_not_available">The file picker is not available</string>
	<string name="filepicker_preference_description">Selected URI:\n %1$s \nbut this will be used instead:\n %2$s</string>
	<string name="choose_backup_folder">Choose a backup folder</string>
	<string name="default_location">Default location</string>
	<string name="use_exact_alarms">Use exact alarms</string>
	<string name="exact_alarms_summary">Uses more battery to show notification reminders in a more reliable way</string>
	<string name="disable_battery_optimizations">Turn off battery optimizations</string>
	<string name="battery_optimizations_active">Battery optimizations on</string>
	<string name="battery_optimizations_inactive">Battery optimizations off</string>
	<string name="allow_exact_reminders">Allow exact reminders</string>
	<string name="allow_exact_reminders_summary">Open a page to allow this app to send reminders more reliably. Only needed since Android 12 "Snow Cone"</string>
	<string name="for_older_devices">For older Android devices</string>
	<string name="overwritten_in_newer_systems">Can be undone by certain notification channel settings</string>
	<string name="prefs_improved_reliability">Preferences to improve reliability</string>
	<string name="notification_channel_settings">Notification channel settings</string>
	<string name="open_channel_settings_description">Open a page to edit the notification settings for this app. These override any settings chosen elsewhere</string>
	<string name="libraries_used">Libraries</string>
	<string name="license">License</string>
	<string name="app_about_dev_team">Created by Jonas Kalderstam and maintained by Campello Manuel</string>
	<string name="app_about_git_repo">This app is copylefted libre software, available at https://github.com/spacecowboy/NotePad</string>
	<string name="app_about_license">Licensed GPLv3+, https://www.gnu.org/licenses.</string>
	<string name="app_about_bugreports">Report bugs and issues at https://github.com/spacecowboy/NotePad/issues</string>
	<string name="app_about_translations">Help translate the app at https://hosted.weblate.org/engage/no-nonsense-notes/</string>
	<string name="disable_android_hibernation">Disable Android hibernation</string>
	<string name="disable_android_hibernation_desc">It is a feature that makes the app less reliable. It may block your reminders. Open this, look for something like \"suspend app activity if unused\" and turn it off</string>
	<string name="msg_hibernation_already_off">Android hibernation is already OFF, you do not need this</string>
	<string name="msg_enable_notifications">Go to settings -> notifications to enable notifications</string>
	<string name="notifications_visibility">Notifications visibility</string>
	<string name="notifications_enabled">Notifications are visible</string>
	<string name="notifications_blocked">Notifications are not visible, so you will not see the reminders. Touch here, find the permissions category, and enable notifications for this app</string>
	<string name="move">Move</string>
	<string name="lock_note">Lock note</string>
	<string name="unlock_note">Unlock note</string>
	<string name="password" translatable="false">Password</string>
	<string name="about">About</string>
	<string name="changelog_full_title">Changelog</string>
	<string name="hide_checkbox">Hide checkbox</string>
	<string name="hide_date">Hide due date</string>
	<string name="item_max_height">Max height of notes/tasks, in rows</string>
	<string name="hide_header">Hide entire widget header</string>
	<string name="transparency">Transparency</string>
	<string name="shortcut_help1">Makes the shortcut open a new note in the selected list with an open text editor.</string>
	<string name="background_sync">Background sync</string>
	<string name="background_sync_info">Syncs once per hour</string>
	<string name="sync_on_change">Sync on changes</string>
	<string name="sync_on_change_info">Schedules a sync shortly after a note has changed</string>
	<string name="sync_on_start">Sync on app start</string>
	<string name="sync_on_start_info">Limits syncing to once every 5 minutes</string>
	<string name="sound">Sound</string>
	<string name="vibrate">Vibrate</string>
	<string name="notifications">Notifications</string>
	<string name="dashclock_restrict_to_tasks_in_a_specific_list">Restrict to tasks in</string>
	<string name="dashclock_show_overdue_tasks">Show overdue tasks</string>
	<string name="dashclock_overdue_tasks_show">Overdue tasks shown</string>
	<string name="dashclock_overdue_tasks_hide">Overdue tasks hidden</string>
	<string name="dashclock_due_upper_limit_title">Limit to tasks due at the latest</string>
	<string name="dashclock_will_show_as_many_as_possible">Show as many as possible</string>
	<string name="dashclock_will_only_show_the_task_due_first" translatable="false">@string/dashclock_show_only_the_next_task</string>
	<string name="dashclock_show_only_the_next_task">Show only the next task</string>
	<string name="dashclock_header_shown">Bold list name</string>
	<string name="dashclock_first_task_shown">Bold title of first task</string>
	<string name="dashclock_display_header">Display list name</string>
	<string name="clickable_links">Clickable links</string>
	<string name="backup">Backup</string>
	<string name="backup_import">Import backup</string>
	<string name="backup_export">Export backup</string>
	<string name="sd_card">SD card</string>
	<string name="sd_card_sync">SD card sync</string>
	<string name="sd_card_summary">Tasks are kept the same between the app and the SD card. Deleting the files thus delete the tasks in the app!</string>
	<string name="directory">Folder</string>
	<string name="directory_summary">Where to store files.</string>
	<string name="sorting">Sorting</string>
</resources>