<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2015 Jonas Kalderstam.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preference_screen">

    <PreferenceCategory android:title="@string/settings_cat_appearance">

        <ListPreference
            android:defaultValue="light_ab"
            android:dialogTitle="@string/settings_theme_dialog"
            android:entries="@array/theme_preference"
            android:entryValues="@array/themevalues_preference"
            android:key="key_current_theme"
            android:summary="Selected option should be here"
            android:title="@string/settings_theme"/>
        <ListPreference
            android:defaultValue=""
            android:dialogTitle="@string/settings_lang_dialog"
            android:key="@string/pref_locale"
            android:summary="Selected option should be here"
            android:title="@string/settings_lang"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_editor_links"
            android:summary=""
            android:title="@string/clickable_links"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">
        <RingtonePreference
            android:key="@string/key_pref_ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:title="@string/sound"/>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_pref_vibrate"
            android:title="@string/vibrate"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_gtask_section_key"
        android:persistent="false"
        android:title="@string/gtasks">
        <SwitchPreference
            android:defaultValue="false"
            android:key="syncEnablePref"
            android:summary="@string/gtasks_sync_info"
            android:title="@string/settings_sync_enable_title"/>

        <Preference
            android:dependency="syncEnablePref"
            android:key="accountPref"
            android:summary=""
            android:title="@string/settings_account_title"/>

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="syncEnablePref"
            android:key="syncInBackground"
            android:summary="@string/background_sync_info"
            android:title="@string/background_sync"/>
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="syncEnablePref"
            android:key="syncOnStart"
            android:summary="@string/sync_on_start_info"
            android:title="@string/sync_on_start"/>
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="syncEnablePref"
            android:key="syncOnChange"
            android:summary="@string/sync_on_change_info"
            android:title="@string/sync_on_change"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_sdcard_section_key"
        android:persistent="false"
        android:title="@string/sd_card">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_sync_sd_enabled"
            android:summary="@string/sd_card_summary"
            android:title="@string/sd_card_sync"/>
        <Preference
            android:dependency="pref_sync_sd_enabled"
            android:key="pref_sync_sd_dir"
            android:summary="@string/directory_summary"
            android:title="@string/directory"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/legacy_backup">
        <Preference
            android:key="backup_import"
            android:title="@string/backup_import"/>
    </PreferenceCategory>

</PreferenceScreen>