<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
         NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it.
    -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:key="list_spinner"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/dashclock_restrict_to_tasks_in_a_specific_list"/>
    <ListPreference
        android:defaultValue="@string/dashclock_pref_today"
        android:entries="@array/due_upper_limit_entries"
        android:entryValues="@array/due_upper_limit_values"
        android:key="list_due_upper_limit"
        android:title="@string/dashclock_due_upper_limit_title"/>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_overdue"
        android:summaryOff="@string/dashclock_overdue_tasks_hide"
        android:summaryOn="@string/dashclock_overdue_tasks_show"
        android:title="@string/dashclock_show_overdue_tasks"/>

    <!-- show single item only -->
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="show_single_only"
        android:summaryOff="@string/dashclock_will_show_as_many_as_possible"
        android:summaryOn="@string/dashclock_will_only_show_the_task_due_first"
        android:title="@string/dashclock_show_only_the_next_task"/>

    <!-- Show header -->
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_header"
        android:summaryOff="@string/dashclock_first_task_shown"
        android:summaryOn="@string/dashclock_header_shown"
        android:title="@string/dashclock_display_header"/>

</PreferenceScreen>