<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/list_menu_group">
        <item
            android:id="@+id/menu_clearcompleted"
            android:orderInCategory="300"
            android:showAsAction="never"
            android:title="@string/menu_clearcompleted"/>

        <item
            android:id="@+id/menu_sort"
            android:icon="@drawable/ic_sort_24dp_white"
            android:orderInCategory="400"
            android:title="@string/sorting"
            android:showAsAction="ifRoom">
            <menu>
                <item
                    android:id="@+id/menu_sort_title"
                    android:title="@string/sort_list_alphabetical"/>
                <item
                    android:id="@+id/menu_sort_due"
                    android:title="@string/sort_list_due"/>
                <item
                    android:id="@+id/menu_sort_manual"
                    android:title="@string/sort_list_manual"/>
            </menu>
        </item>

    </group>

</menu>