<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 Jonas Kalderstam.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:fragment="com.nononsenseapps.notepad.prefs.MainPrefs"
        android:icon="@drawable/device_access_brightness_medium_dark"
        android:summary=""
        android:title="@string/settings_cat_appearance" />
    <header
        android:summary=""
        android:icon="@drawable/ic_action_list_prefs_dark"
        android:fragment="com.nononsenseapps.notepad.prefs.ListPrefs"
        android:title="@string/settings_list" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.SyncPrefs"
        android:icon="@drawable/navigation_refresh_dark"
        android:summary=""
        android:title="@string/settings_cat_syncing" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.NotificationPrefs"
        android:icon="@drawable/device_access_alarms_dark"
        android:summary=""
        android:title="@string/notifications" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.PasswordPrefs"
        android:icon="@drawable/device_access_secure_dark"
        android:summary=""
        android:title="@string/password" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.BackupPrefs"
        android:icon="@drawable/ic_action_device_access_sd_storage_dark"
        android:summary=""
        android:title="@string/backup" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.ChangelogPrefs"
        android:icon="@drawable/action_help_dark"
        android:summary=""
        android:title="@string/changelog_full_title" />
    <header
        android:fragment="com.nononsenseapps.notepad.prefs.AboutPrefs"
        android:icon="@drawable/action_about_dark"
        android:summary=""
        android:title="@string/about" />

    <!--
    <header android:fragment="com.nononsenseapps.notepad.widget.ListWidgetConfigure$ThemeFragment"
            android:title="Appereance"
            android:summary="Set the theme and background transparency">
        Arbitrary key/value pairs can be included with a header as
             arguments to its fragment.
        <extra android:name="someKey" android:value="someHeaderValue" />
    </header>
    -->

</preference-headers>