<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 Jonas Kalderstam.

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- Outside group to allow for action bar placement -->
	<item
		android:id="@+id/menu_delete"
		android:icon="@drawable/ic_delete_24dp"
		android:orderInCategory="100"
		android:title="@string/menu_delete"
		app:showAsAction="ifRoom">
	</item>

	<item
		android:id="@+id/menu_revert"
		android:icon="@drawable/ic_undo_24dp"
		android:orderInCategory="101"
		android:title="@android:string/cancel"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/menu_share"
		android:icon="@drawable/ic_share_24dp"
		android:orderInCategory="102"
		android:title="@string/menu_share"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/menu_lock"
		android:icon="@drawable/ic_lock_closed_24dp"
		android:orderInCategory="103"
		android:title="@string/lock_note"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/menu_unlock"
		android:icon="@drawable/ic_lock_open_24dp"
		android:orderInCategory="104"
		android:title="@string/unlock_note"
		app:showAsAction="ifRoom"/>

	<group android:id="@+id/editor_menu_group">
		<item
			android:id="@+id/menu_timemachine"
			android:orderInCategory="105"
			android:title="@string/timemachine"
			app:showAsAction="never"/>
	</group>

</menu>