<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_delete"
        android:icon="?content_discard"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete"/>
    <item
        android:id="@+id/menu_switch_list"
        android:icon="?ic_action_list"
        android:showAsAction="ifRoom"
        android:title="@string/move"/>
    <!-- android:actionProviderClass="android.widget.ShareActionProvider" -->
    <item
        android:id="@+id/menu_share"
        android:icon="?ic_action_share"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_copy"
        android:icon="?content_copy"
        android:showAsAction="ifRoom"
        android:title="@android:string/copy"/>

</menu>