<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 Jonas Kalderstam

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="app_preference_backup">

	<!-- launch the android file picker to choose a directory -->
	<Preference
		android:icon="@drawable/ic_folder_24dp"
		android:key="key_backup_dir_uri"
		app:singleLineTitle="false"
		android:summary="added in BackupPrefs.java onUriDirPrefChange()"
		android:title="@string/choose_backup_folder"/>

	<Preference
		android:key="backup_import"
		android:icon="@drawable/ic_import"
		android:title="@string/backup_import"/>

	<Preference
		android:key="backup_export"
		android:icon="@drawable/ic_export"
		android:title="@string/backup_export"/>

</PreferenceScreen>