<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="8dp"
	android:orientation="vertical"
	tools:context=".ShortcutConfig">

	<TextView
		android:id="@+id/textView1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="2dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="2dp"
		android:fontFamily="sans-serif-light"
		android:text="@string/settings_list"
		android:textAppearance="@android:style/TextAppearance.Holo.Medium"
		android:textColor="?android:attr/textColorPrimary"/>

	<Spinner
		android:id="@+id/listSpinner"
		android:layout_width="match_parent"
		android:layout_height="@dimen/list_item_min_size"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="2dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="2dp"
		android:prompt="@string/settings_list_dialog"
		android:spinnerMode="dropdown"
		tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

	<androidx.appcompat.widget.SwitchCompat
		android:id="@+id/createNoteSwitch"
		android:layout_width="match_parent"
		android:layout_height="@dimen/list_item_min_size"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="20dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="2dp"
		android:text="@string/title_create"
		android:textAppearance="@android:style/TextAppearance.Holo.Medium"
		android:textColor="?android:attr/textColorPrimary"/>

	<TextView
		android:id="@+id/textView2"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="2dp"
		android:layout_marginRight="16dp"
		android:layout_marginBottom="2dp"
		android:fontFamily="sans-serif-light"
		android:text="@string/shortcut_help1"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<Button
		android:id="@+id/ok"
		android:layout_marginTop="30dp"
		android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_height="wrap_content"
		android:text="@android:string/ok"/>

</LinearLayout>