<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/list_widget_conf_wrapper"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/googlenow_darkergrey"
	android:fillViewport="true"
	android:isScrollContainer="true"
	android:scrollbars="vertical"
	tools:context="com.nononsenseapps.notepad.widget.ListWidgetConfig"
	tools:ignore="Overdraw">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:orientation="vertical"
		android:paddingHorizontal="16dp"
		android:paddingBottom="16dp"
		tools:context="com.nononsenseapps.notepad.widget.ListWidgetConfig">

		<Spinner
			android:id="@+id/listSpinner"
			android:layout_width="match_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:prompt="@string/settings_list_dialog"
			android:spinnerMode="dropdown"
			tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

		<Spinner
			android:id="@+id/sortingSpinner"
			android:layout_width="match_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:entries="@array/sorting_preference"
			android:spinnerMode="dropdown"
			tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

		<Spinner
			android:id="@+id/themeSpinner"
			android:layout_width="match_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:entries="@array/widget_theme_preference"
			android:spinnerMode="dropdown"
			tools:listitem="@android:layout/simple_spinner_dropdown_item"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:fontFamily="sans-serif-light"
			android:labelFor="@+id/itemRowsSeekBar"
			android:paddingLeft="16dp"
			android:text="@string/transparency"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textStyle="normal"/>

		<SeekBar
			android:id="@+id/transparencySeekBar"
			style="?android:attr/seekBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:max="100"
			android:progress="75"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:fontFamily="sans-serif-light"
			android:labelFor="@+id/itemRowsSeekBar"
			android:paddingLeft="16dp"
			android:text="@string/item_max_height"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textStyle="normal"/>

		<SeekBar
			android:id="@+id/itemRowsSeekBar"
			style="?android:attr/seekBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:max="10"
			android:progress="3"/>

		<CheckBox
			android:id="@+id/hideCheckBox"
			style="?android:attr/checkboxStyle"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:text="@string/hide_checkbox"/>

		<CheckBox
			android:id="@+id/hideDateCheckBox"
			style="?android:attr/checkboxStyle"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:text="@string/hide_date"/>

		<CheckBox
			android:id="@+id/transparentHeaderCheckBox"
			style="?android:attr/checkboxStyle"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:text="@string/hide_header"/>

		<CheckBox
			android:id="@+id/showCompletedCheckBox"
			style="?android:attr/checkboxStyle"
			android:layout_width="fill_parent"
			android:layout_height="@dimen/list_item_min_size"
			android:text="@string/show_completed_notes"/>

	</LinearLayout>

</ScrollView>